--- a/Bigram.ipynb
+++ b/Bigram.ipynb
@@ -348,11 +348,8 @@
     "            else:\n",
     "                f=0\n",
     "                mx=0\n",
-    "                for x in bw:\n",
-    "                    s=np.log(1+(c*x))\n",
-    "                    if s>mx:\n",
-    "                        mx=s\n",
-    "                cw.append((iter,mx))\n",
+    "                s=np.log(1+(c*sum(bw)))\n",
+    "                cw.append((iter,s))\n",
     "            iter+=1\n",
     "\n",
     "\n",
@@ -361,12 +358,7 @@
     "        preds.append(article_type[ans[0]])\n",
     "        actual.append(t)\n",
     "        \n",
-    "    print(t,'Completed')\n",
-    "#         if article_type[ans[0]]==t:\n",
-    "#             same+=1\n",
-    "    \n",
-    "    #print('Precision for',t,':',same/200,same)\n",
-    "    \n",
+    "    print(t,'Completed')   \n",
     "            "
    ]
   },
@@ -538,6 +530,7 @@
     "actual=list(data['Query Name'])\n",
     "\n",
     "for i in range(len(nouns_title)):\n",
+    "#for i in range(200,210):\n",
     "    a=nouns_title[i]\n",
     "    b=nouns_content[i]\n",
     "\n",
@@ -576,17 +569,15 @@
     "        else:\n",
     "            f=0\n",
     "            mx=0\n",
-    "            for x in bw:\n",
-    "                s=np.log(1+(c*x))\n",
-    "                if s>mx:\n",
-    "                    mx=s\n",
-    "            cw.append((iter,mx))\n",
+    "            s=np.log(1+(c*sum(bw)))\n",
+    "            cw.append((iter,s))\n",
     "        iter+=1\n",
     "\n",
     "\n",
     "    ans=max(cw,key=lambda x:x[1])\n",
     "\n",
     "    preds.append(article_type[ans[0]])\n",
+    "    print(i+1)\n",
     "print('Completed')"
    ]
   },
@@ -623,13 +614,6 @@
     "from sklearn.metrics import precision_recall_fscore_support\n",
     "precision_recall_fscore_support(actual,preds,average='weighted')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
