--- a/Pentagram.ipynb
+++ b/Pentagram.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,13 +347,9 @@
     "            else:\n",
     "                f=0\n",
     "                mx=0\n",
-    "                for x in bw:\n",
-    "                    s=np.log(1+(c*x))\n",
-    "                    if s>mx:\n",
-    "                        mx=s\n",
-    "                cw.append((iter,mx))\n",
+    "                s=np.log(1+(c*sum(bw)))\n",
+    "                cw.append((iter,s))\n",
     "            iter+=1\n",
-    "\n",
     "\n",
     "        ans=max(cw,key=lambda x:x[1])\n",
     "        \n",
@@ -519,9 +515,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Completed\n"
+     ]
+    }
+   ],
    "source": [
     "preds=[]\n",
     "actual=[]\n",
@@ -570,13 +574,9 @@
     "        else:\n",
     "            f=0\n",
     "            mx=0\n",
-    "            for x in bw:\n",
-    "                s=np.log(1+(c*x))\n",
-    "                if s>mx:\n",
-    "                    mx=s\n",
-    "            cw.append((iter,mx))\n",
+    "            s=np.log(1+(c*sum(bw)))\n",
+    "            cw.append((iter,s))\n",
     "        iter+=1\n",
-    "\n",
     "\n",
     "    ans=max(cw,key=lambda x:x[1])\n",
     "\n",
@@ -610,20 +610,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.3625890109396411, 0.2725, 0.17141729258848035, None)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.metrics import precision_recall_fscore_support\n",
     "precision_recall_fscore_support(actual,preds,average='weighted')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
