--- a/Quadgram.ipynb
+++ b/Quadgram.ipynb
@@ -347,13 +347,9 @@
     "            else:\n",
     "                f=0\n",
     "                mx=0\n",
-    "                for x in bw:\n",
-    "                    s=np.log(1+(c*x))\n",
-    "                    if s>mx:\n",
-    "                        mx=s\n",
-    "                cw.append((iter,mx))\n",
+    "                s=np.log(1+(c*sum(bw)))\n",
+    "                cw.append((iter,s))\n",
     "            iter+=1\n",
-    "\n",
     "\n",
     "        ans=max(cw,key=lambda x:x[1])\n",
     "        \n",
@@ -570,11 +566,8 @@
     "        else:\n",
     "            f=0\n",
     "            mx=0\n",
-    "            for x in bw:\n",
-    "                s=np.log(1+(c*x))\n",
-    "                if s>mx:\n",
-    "                    mx=s\n",
-    "            cw.append((iter,mx))\n",
+    "            s=np.log(1+(c*sum(bw)))\n",
+    "            cw.append((iter,s))\n",
     "        iter+=1\n",
     "\n",
     "\n",
@@ -617,13 +610,6 @@
     "from sklearn.metrics import precision_recall_fscore_support\n",
     "precision_recall_fscore_support(actual,preds,average='weighted')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
